# educational-crm

./: .dockerignore  .env.example  .gitignore  README.md  START_HERE.md  courseprerequisitefix.patch  docker-compose.yml
backend/: .coverage  .env.example  .env.test  ARCHITECTURE.md  DEPLOYMENT.md  Dockerfile  README.md  conftest.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 98aa9341094e_department_crud.py  a1b2c3d4e5f6_journey_crud.py  b2c3d4e5f6a7_course_crud.py  c3d4e5f6a7b8_roadmap_crud.py  ce3b622728ad_initial.py  d4e5f6a7b8c9_journey_roadmap_fk.py  e390c617aceb_auth_user_organization.py  e76302243fa0_person_crud.py  f6a7b8c9d0e1_class_crud.py  g7b8c9d0e1f2_consultation_crud.py  h8c9d0e1f2a3_enrollment_crud.py  i9d0e1f2a3b4_communication_crud.py  j0e1f2a3b4c5_invoice_installment_crud.py  k1a2b3c4d5e6_attendance_crud.py  l2b3c4d5e6f7_task_activity.py  l2b3c4d5e6f7_task_activity_crud.py  m3c4d5e6f7a8_activity_type_to_action.py  n4d5e6f7a8b9_task_schema_align.py  o5e6f7a8b9c0_payment_crud.py  p6f7a8b9c0d1_refund_crud.py  q7r8s9t0u1v2_person_extended_fields.py  (+10 more)
backend/app/: main.py  scheduler.py
backend/app/auth/: deps.py  (+5 more)
backend/scripts/: entrypoint.sh  reset_data.py  seed_data.py
backend/tests/: test_auth_me.py  test_consultation.py  test_course_prerequisites.py  test_crud.py  test_edge_cases.py  test_finance.py  test_pagination.py  test_permission_audit.py  test_person_guardian_phone.py  test_scheduled_jobs.py  test_tenancy.py  test_user_signature.py  test_workflow.py
(+357 files in other folders)
