[project]
name = "educational-crm-backend"
version = "0.1.0"
description = "Educational Institute CRM — FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.5",
    "apscheduler>=3.11.2",
    "fastapi>=0.138.1",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.1,<4.1",
    "psycopg2-binary>=2.9.12",
    "email-validator>=2.3.0",
    "pydantic>=2",
    "pydantic-settings>=2.14.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "freezegun>=1.5.5",
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
